<resources>
    <string name="app_name">LDT</string>
    <string name="create_an_account">Create an Account</string>
    <string name="Login">Login</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title">legally distinct tamagotchi</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="create_account">Create account</string>
    <string name="sign_up">Sign up</string>
    <string name="welcome_back">Welcome back</string>
    <string name="start_game">Start game</string>
    <string name="digits">ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_info">uid: 1 | Admin: false\nusr: testuser1\npwd: testuser1\n\nuid: 2 | Admin: true\nusr: Admin2\n pwd: admin2</string>
</resources>