<?xml version="1.0" encoding="utf-8"?>

<!--Relative Layout Is Used-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey"
    tools:context=".activities.CreateAcctActivity">

    <!--Text View for Title-->

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/tama_font"
        android:gravity="center"
        android:text="@string/title"
        android:textColor="@color/black"
        android:textSize="50sp" />

    <!--Edit Text for Username-->

    <EditText
        android:id="@+id/et_usr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/tv_title"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:fontFamily="@font/tama_font"
        android:hint="@string/username"
        android:inputType="textPersonName" />

    <!--Edit Text for Password-->

    <EditText
        android:id="@+id/et_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/et_usr"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:fontFamily="@font/tama_font"
        android:hint="@string/password"
        android:inputType="textPersonName" />

    <!--Button for Login-->

    <Button
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/et_pwd"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/tama_font"
        android:text="@string/register" />

</RelativeLayout>